# serde_nested_with

./: .devcontainer.json  .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  expanded.rs
.github/workflows/: audit.yml  lint.yml  pr.yml  push.yml  release.yml  test.yml
src/: lib.rs
tests/: test_both.rs  test_custom_module.rs  test_deserialize_with.rs  test_multiple_structs.rs  test_serialize_deserialize_with.rs  test_serialize_with.rs  test_with.rs  tests.rs
