[dependencies]
darling = "0.20.5"
proc-macro-error = "1.0.4"
quote = "1.0.35"
syn = "2.0.48"

[dev-dependencies]
serde = {version = "1.0.196", features = ["derive"]}
serde_test = "1.0.176"
time = {version = "0.3.32", features = ["formatting", "parsing", "serde"]}

[lib]
proc-macro = true

[package]
authors = ["Lorenzo Murarotto <lnzmrr@gmail.com>"]
description = "Use serde `with` attribute on nested fields."
edition = "2021"
keywords = ["serde"]
license = "MIT"
name = "serde_nested_with"
repository = "https://github.com/murar8/serde_nested_with"
version = "0.2.4"
