[dependencies]
darling = "0.21.3"
proc-macro-error2 = "2.0"
quote = "1.0.40"
syn = "2.0.106"

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_test = "1.0.177"
time = { version = "0.3.41", features = ["formatting", "parsing", "serde"] }

[lib]
proc-macro = true

[package]
authors = ["Lorenzo Murarotto <lnzmrr@gmail.com>"]
description = "Use serde attributes on nested fields."
edition = "2021"
keywords = ["serde"]
license = "MIT"
name = "serde_nested_with"
repository = "https://github.com/murar8/serde_nested_with"
version = "0.2.5"
